--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
+    "test": "mocha 'tests/testing.js'",
     "dev": "nodemon app.js"
   },
   "author": "",
@@ -14,9 +15,11 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "http-errors": "^1.8.0",
+    "mocha": "^9.2.2",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "supertest": "^6.2.2"
   }
 }
